--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,37 +4,35 @@ on:
   push:
     branches:
       - main
-    pull_request:
+  pull_request:
 
 jobs:
-  build-and-test: 
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
-      # step 1: checkout the code
+      # Step 1: Checkout the code
       - name: Checkout code
-      uses: actions/checkout@v3
+        uses: actions/checkout@v3
 
-      # step 2: setup docker
+      # Step 2: Set up Docker
       - name: Setup Docker
-        uses: docker/setup-action@v2
-        with:
-          node-version: '14'
-        
-      # step 3: build the docker image
+        uses: docker/setup-buildx-action@v2
+
+      # Step 3: Build the Docker image
       - name: Build Docker image
         run: docker compose build
 
-      # step 4: run docker container
+      # Step 4: Run the Docker container
       - name: Run Docker container
         run: docker compose up -d
 
-      # step 5: test app
+      # Step 5: Test app
       - name: Test app
         run: |
-          sleep 10 
+          sleep 10
           curl -f http://localhost:3000 || exit 1
 
-      # step 6: stop and remove the container
+      # Step 6: Stop and remove the container
       - name: Stop and remove container
         run: docker compose down
