--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ on:
   pull_request:
 
 jobs:
+  # job 1: build-and-test
   build-and-test:
     runs-on: ubuntu-latest
 
@@ -20,7 +21,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       # Step 3: Build the Docker image
-      - name: Build Docker image
+      - name: Hey gabi!
         run: docker compose build
 
       # Step 4: Run the Docker container
