--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,38 +1,34 @@
 name: Dockerized Next.js CI
 
-on: # trigger
-  pull_request: # run only on pull requests to main branch
+on:
+  pull_request:
     branches:
       - main
 
 jobs:
-  # job 1: build-and-test
-  build-and-test:
+  test:
     runs-on: ubuntu-latest
 
+    env:
+      ENV_VAR: "test"
+
     steps:
-      # Step 1: Checkout the code
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
-      # Step 2: Set up Docker
-      - name: Setup Docker
-        uses: docker/setup-buildx-action@v2
+      - name: Build and Start Services
+        run: docker compose up -d --build
 
-      # Step 3: Build the Docker image
-      - name: Build Docker image
-        run: docker compose build
-
-      # Step 4: Run the Docker container
-      - name: Run Docker container
-        run: docker compose up -d
-
-      # Step 5: Test app
-      - name: Test app
+      - name: Wait for App to be Ready
         run: |
-          sleep 10
-          curl -f http://localhost:3000 || exit 1
+          for i in {1..10}; do
+            curl -s http://web:3000 && break
+            echo "Waiting for app..."
+            sleep 3
+          done
 
-      # Step 6: Stop and remove the container
-      - name: Stop and remove container
+      - name: Run Tests
+        run: curl -f http://web:3000 || exit 1
+
+      - name: Stop and Clean Up
         run: docker compose down
